--- a/Proyecto_ASPNETCoreWebApi/wwwroot/index.html
+++ b/Proyecto_ASPNETCoreWebApi/wwwroot/index.html
@@ -9,16 +9,17 @@
     <h1>Department CRUD</h1>
     <h3>Add</h3>
     <form action="javascript:void(0);" method="POST" onsubmit="addItem()">
-        <input type="text" id="add-name" placeholder="New to-do">
+        <input type="text" id="add-name" placeholder="DepartmentName">
+        <input type="text" id="add-group" placeholder="DepartmentGroup">        
         <input type="submit" value="Add">
     </form>
-
+    
     <div id="editForm">
         <h3>Edit</h3>
         <form action="javascript:void(0);" onsubmit="updateItem()">
-            <input type="hidden" id="edit-id">
-            <input type="checkbox" id="edit-isComplete">
+            <input type="hidden" id="edit-id">            
             <input type="text" id="edit-name">
+            <input type="text" id="edit-group">
             <input type="submit" value="Save">
             <a onclick="closeInput()" aria-label="Close">&#10006;</a>
         </form>
@@ -28,12 +29,12 @@
 
     <table>
         <tr>
-            <th>Is Complete?</th>
             <th>Name</th>
+            <th>Group</th>
             <th></th>
             <th></th>
         </tr>
-        <tbody id="todos"></tbody>
+        <tbody id="departments"></tbody>
     </table>
 
     <script src="js/site.js" asp-append-version="true"></script>
